# mil-histopathology

./: .gitignore  README.md  ResNet.ipynb  environment.yml  environment_resnet.yml  pyproject.toml
.github/workflows/: ci.yml
