[project]
name = "mil-histopathology"
version = "0.1.0"
description = "Semester Project Deep Learning SS26"
requires-python = ">=3.10"

dependencies = [
    "streamlit>=1.35",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "jinja2>=3.1",
    "weasyprint>=62",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8",
    "pre-commit>=3",
    "pyinstaller>=6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]